mobile overflow issue fixed

--- a/src/components/css/projectModal.scss
+++ b/src/components/css/projectModal.scss
@@ -21,6 +21,7 @@
     position: fixed;
     top: 2rem;
     width: 90%;
+    z-index: 10;
     border-radius: 5px 5px 0 0;
     border-bottom: 1px solid var(--borderColor);
     display: flex;
